--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,8 +4,13 @@ Title: Fits a Linear Model
 Version: 0.1.0
 Author: Spencer Haupert
 Maintainer: Spencer Haupert <srhaup@umich.edu>
-Description:    This package reimplements the main functionality from 
-the lm() function in R's stats package.
+Description: 
+    This package reimplements the main functionality from 
+    the lm() function in R's stats package.
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
+Imports: 
+    magrittr,
+    stats
+RoxygenNote: 7.1.1
