--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,5 +15,8 @@ Imports:
     stats
 RoxygenNote: 7.1.1
 Suggests: 
+    rmarkdown,
+    knitr,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
+VignetteBuilder: knitr
