added tidyr to description

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,8 @@ Imports:
     bench,
     ggplot2,
     magrittr,
-    stats
+    stats,
+    tidyr
 RoxygenNote: 7.1.1
 Suggests: 
     rmarkdown,
